--- a/src/client/components/molecules/text-readmore-section/text-readmore-section.scss
+++ b/src/client/components/molecules/text-readmore-section/text-readmore-section.scss
@@ -1,9 +1,6 @@
 .textReadMoreSection {
-  @include grid-container;
-  @include grid-media($sba-grid-small) {
-    @include grid-column(6);
-    margin-left: 14px;
-    text-align: left;
-  }
+	// @include grid-media($sba-grid-large){
+	// 		margin-left: 0px;
+	// }
 }
 
